[gd_scene format=3 uid="uid://bu5avn6ltdgu1"]

[ext_resource type="Texture2D" uid="uid://d2x4s44tq3fd3" path="res://Assets/Textures/palette_button_outline.png" id="1"]
[ext_resource type="Texture2D" uid="uid://bb2kaiahpvl5m" path="res://Assets/Textures/palette_button.png" id="2"]
[ext_resource type="Script" uid="uid://bce860vn35j8i" path="res://UI/Components/PaletteButton.gd" id="3"]

[node name="PaletteButton" type="Control" unique_id=16028549 node_paths=PackedStringArray("_color_texture", "_selection_texture")]
custom_minimum_size = Vector2(31, 31)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1889.0
offset_bottom = -1049.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")
_color_texture = NodePath("Color")
_selection_texture = NodePath("Selection")

[node name="Color" type="TextureRect" parent="." unique_id=556635552]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="Selection" type="TextureRect" parent="." unique_id=1545218814]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 4

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
